force-app/main/default/objects/ccrz__E_CartItemGroup__c/ccrz__E_CartItemGroup__c.object-meta.xml
<CustomObject>
    <description>Order Item Group represents a group of items on the order who share shipping details.</description>
    <label>CC Cart Item Group</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Cart Item Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>