force-app/main/default/objects/ccrz__E_CartItemGroup__c/fields/ccrz__CartItemGroupId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CartItemGroupId__c</fullName>
    <description>External key for Cart Item Group</description>
    <externalId>true</externalId>
    <label>CartItemGroupId</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>