force-app/main/default/objects/ccrz__E_CartItemGroup__c/fields/ccrz__GroupName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__GroupName__c</fullName>
    <description>The name of the item group</description>
    <label>Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>