force-app/main/default/objects/ccrz__E_CartItemGroup__c/fields/ccrz__ShipMethod__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShipMethod__c</fullName>
    <description>The shipping method selected for this item group</description>
    <label>Ship Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>